[package]
name = "substrate-client-keystore"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
parking_lot = "0.10.0"
async-trait = "0.1.30"
hex = "0.4"
serde_json = "1.0"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
default-features = false
rev = "83808aa8"

[dependencies.sp-keystore]
git = "https://github.com/paritytech/substrate.git"
package = "sp-keystore"
rev = "83808aa8"

[dependencies.sc-keystore]
git = "https://github.com/paritytech/substrate.git"
package = "sc-keystore"
rev = "83808aa8"

[dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
package = "sp-keyring"
rev = "83808aa8"

[dependencies.sp-application-crypto]
git = "https://github.com/paritytech/substrate.git"
package = "sp-application-crypto"
rev = "83808aa8"

[dev-dependencies]
tempfile = "3.2.0"
