[package]
name = "test_no_std"
version = "0.6.0"
authors = ["Alain Brenzikofer <alain.brenzikofer@scs.ch>"]
edition = "2018"
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
libc = { version="0.2", default-features=false }

[dependencies.mycelium] 
path = ".."
default-features=false
features=["full_crypto"]

[dependencies.application-crypto]
git = "https://github.com/paritytech/substrate.git"
package = "sp-application-crypto"
default-features = false
features = ["full_crypto"]
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = "83808aa8"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate.git"
default-features=false
features = ["disable_oom", "disable_panic_handler"]
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = "83808aa8"

#[patch.crates-io]
#ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}
