[package]
name = "api-client-tutorial"
version = "0.6.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
substrate-api-client = { path = "../.." }
codec = { package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.keyring]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
package = "sp-keyring"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'
