[package]
name = "webapp-client"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
sauron = { version = "0.43"}
console_error_panic_hook = { version = "0.1"}
log = "0.4"
console_log = {version ="0.2", features = ["color"]}
serde = { version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "WebSocket",
    "MessageEvent",
]


[patch.crates-io]
sauron = { path = "../../../sauron" }
