[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'


[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'


[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.node-template-runtime]
path = '../runtime'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
version = "0.9.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
version = "0.9.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
version = "0.9.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
version = "0.9.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
version = "0.9.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
version = "0.9.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
version = "0.9.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
version = "0.9.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
version = "0.9.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
version = "0.9.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[[bin]]
name = 'node-template'
