[package]
name = "pallet-nicks"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for nick management"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'


[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
optional = true
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = "3.0.0"
#branch = 'master'
tag = 'monthly-2021-07'
#rev = '83808aa8'
